--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^7.0.0",
+    "axios": "^1.12.2",
     "bootstrap": "^5.3.0",
     "core-js": "^3.8.3",
     "install": "^0.13.0",
