--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "@fortawesome/fontawesome-free": "^7.0.0",
     "axios": "^1.12.2",
     "bootstrap": "^5.3.0",
+    "chart.js": "^4.5.1",
     "core-js": "^3.8.3",
     "install": "^0.13.0",
     "vue": "^3.2.13",
+    "vue-chartjs": "^5.3.2",
     "vue-router": "^4.0.3"
   },
   "devDependencies": {
